feat: support platform-specific ecommerce checks
